--- a/index.html
+++ b/index.html
@@ -5,10 +5,22 @@
     <head>
         <link rel="stylesheet" href="style.css" />
         <title>My Personal Website</title>
+        <style>
+          h1 {text-align: center;}
+          h2,
+          h3 {text-align: center;}
+          p {text-align: center;}
+        </style>
       </head>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <h1>Hi there!</h1>
     <script src="script.js"></script>
+    <p> My name is Daisy!</p>
+    <p> My professional background is in retail, hospitality, and photography. <br> 
+    My hobbies include scrapbooking, illustrating, reading, and writing! I live with my fiancé and our 3 birds.</p>
+    <img src="https://i.imgur.com/He7DA7Q.png" alt="Miles">
+    <h3>Contact</h3>
+    <p>daisyyi@rocketmail.com</p>
   </body>
 </html>
